# static_blog_template

./: .gitignore  LICENSE  README.md  pelicanconf.py  pyproject.toml
.github/workflows/: preview.yaml
content/articles/: _template.md  hello_elixir.md
content/pages/: about.md
themes/minimal-xy/templates/: article.html  base.html  page.html
