[tool.poetry]
name = "static-blog-template"
version = "0.1.0"
description = ""
authors = ["Marko Vukovic <mvkvc.git@gmail.com>"]
readme = "README.md"
packages = [{include = "static_blog_template"}]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.8.0"}
pandas = "^1.5.3"
matplotlib = "^3.6.3"
bokeh = "^3.0.3"
plotly = "^5.13.0"
jupyterlab = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
